# Pulse

./: CONFIG.md  Cargo.toml  README.md  completed.json  config.json  quiz.json
config/: bot_config.json  completed.json  poll.json  quiz.json  schedule.json
src/: bot.rs  config.rs  main.rs  poll.rs  quiz.rs  schedule.rs  utils.rs
src/config/: bot_config.rs  mod.rs  poll.rs  quiz.rs  schedule.rs
