[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = "0.12.2"
anyhow = "1.0.86"
