[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.39"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serenity = "0.12.4"
anyhow = "1.0.94"
